  programmes.
* Elaborator reflection is now a part of the prelude. It is no longer
  necessary to import Language.Reflection.Elab.
* The `PERF` effect allows for simple performance metrics to be collected
  from Effectful programs.
* Some constructors that never actually occurred have been removed from
  the TT and Raw reflection datatypes in Language.Reflection.

Tool updates
------------
* Records are now shown as records in :doc, rather than as the underlying
  datatype
* iPKG files have a new option `pkgs` which takes a comma-separated list
  of package names that the idris project depends on. This reduces bloat
  in the `opts` option with multiple package declarations.
* iPKG files now allow `executable = "your filename here"` in addition to
  the existing `executable = yourFilenameHere` style. While the unquoted
  version is limited to filenames that look like namespaced Idris identifiers
  (`your.filename.here`), the quoted version accepts any valid filename.
* Add definition command (\d in Vim, Ctrl-Alt-A in Atom, C-c C-s in Emacs) now
  adds missing clauses if there is already a definition.

Miscellaneous updates
---------------------
* Disable the deprecation warnings for %elim and old-style tactic scripts
  with the --no-elim-deprecation-warnings and --no-tactic-deprecation-warnings
  flags.


New in 0.9.19:
--------------
* The Idris Reference manual has been fleshed out with content originally found
  on the GitHub wiki.
* The Show class has been moved into Prelude.Show and augmented with the method
  showPrec, which allows correct parenthesization of showed terms. This comes
  with the type Prec of precedences and a few helper functions.
* New REPL command :printerdepth that sets the pretty-printer to only descend to
  some particular depth when printing. The default is set to a high number to
  make it less dangerous to experiment with infinite structures. Infinite depth
  can be set by calling :printerdepth with no argument.