@@ -805,7 +805,11 @@ process fn (Eval t)
                       getIState >>= flip warnDisamb t
                       (tm, ty) <- elabREPL recinfo ERHS t
                       ctxt <- getContext
-                      let tm' = perhapsForce $ normaliseAll ctxt [] tm
+                      let tm' = perhapsForce $ normaliseBlocking ctxt [] 
+                                                  [sUN "foreign",
+                                                   sUN "prim_read",
+                                                   sUN "prim_write"]
+                                                 tm
                       let ty' = perhapsForce $ normaliseAll ctxt [] ty
                       -- Add value to context, call it "it"
                       updateContext (addCtxtDef (sUN "it") (Function ty' tm'))
@@ -813,7 +817,8 @@ process fn (Eval t)
                       logLvl 3 $ "Raw: " ++ show (tm', ty')
                       logLvl 10 $ "Debug: " ++ showEnvDbg [] tm'
                       let tmDoc = pprintDelab ist tm'
-                          tyDoc =  pprintDelab ist ty'
+                          -- errReverse to make type more readable
+                          tyDoc =  pprintDelab ist (errReverse ist ty')
                       iPrintTermWithType tmDoc tyDoc
   where perhapsForce tm | termSmallerThan 100 tm = force tm
                         | otherwise = tm
