@@ -15,16 +15,17 @@ syntax "ifM" [test] "then" [t] "else" [e]
     = test >>= (\b => if b then t else e)
 
 open : String -> (p:Purpose) -> Creator (Either () (FILE p))
-open fn p = ioc (do h <- fopen fn (pstring p)
-                    ifM validFile h
-                        then return (Right (OpenH h))
-                        else return (Left ()))
+open fn p = ioc (do Right h <- fopen fn (pstring p)
+                       | Left err => return (Left ())
+                    return (Right (OpenH h)))
 
 close : FILE p -> Updater ()
 close (OpenH h) = iou (closeFile h)
 
 readLine : FILE Reading -> Reader String
-readLine (OpenH h) = ior (fread h)
+readLine (OpenH h) = ior (do Right str <- fread h
+                                   | return ""
+                             return str)
 
 eof : FILE Reading -> Reader Bool
 eof (OpenH h) = ior (feof h)
